--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -69,7 +69,8 @@
 			}
 		};
 		xmlhttp.open("GET", "num.json", true);
-		xmlhttp.send();				
+		xmlhttp.send();		
+		run();
 	</script>
 </head>
 <body>
