--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Curium Digital Money</title>
-  <meta name="description" content="Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
-        Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
+  <meta name="description" content="Curium (CRU) is a community driven cryptocurrency ensuring decentralization by giving power to the voice of individuals.
+        Backed by the security of the latest in ASIC resistant hashing algorithms Curium is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -63,18 +63,18 @@
     <article class="odd">
       <h2 id="Curium" class="blocktitle ">Curium</h2>
       <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralization by giving power to the voice of individuals.
-        Backed by the security of the latest in POS hashing algorithm it is a project that has been engineered
+        Backed by the security of the latest in POS hashing algorithms it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
 
       <div class="features">
         <div class="feature__block">
           <img class="feature-img" src="img/svg/masternode.svg" alt="">
-          <p>An integrated network of nodes ensures a safe and effective transfer of funds anywhere in the world</p>
+          <p>An integrated network of nodes ensure a safe and effective transfer of funds anywhere in the world</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/algo.svg" alt="">
-          <p>The latest POS algorithm, ensuring CRU will stay decentralised</p>
+          <p>The latest POS algorithm, ensuring CRU will stay decentralized</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/secure.svg" alt="">
@@ -88,7 +88,7 @@
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/mining.svg" alt="">
-          <p>Developed by a passionate and motivated team, driven by a desire for a global, secure & decentralised way of payment</p>
+          <p>Developed by a passionate and motivated team, driven by a desire for a global, secure & decentralized way of payment</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/id.svg" alt="">
@@ -184,7 +184,7 @@
         <div class="question">
           <h3 class="">Who is the Curium Team?</h3>
           <div class="answer">
-            Curium Users are the Curium Team! Users are encouraged to contribute to Curium’s growth in the way they see fit. With CRU’s and CRU proposals Curium members can help by contributing skills they already have or work with teams to gain new skills. We currently have a strongly committed group of Developers, Contributors, and Moderators. All of which actively participate in contributing to a brighter future for Curium.
+            Curium Users are the Curium Team! Users are encouraged to contribute to Curium’s growth in the way they see fit. With CRU’s and CRU proposals Curium members can help by contributing skills they already have, or work with teams to gain new skills. We currently have a strongly committed group of Developers, Contributors, and Moderators. All of which actively participate in contributing to a brighter future for Curium.
           </div>
         </div>
 
@@ -206,7 +206,7 @@ CRU Proposals allow for Curium master node holders to dictate the direction of t
           <h3 class="">Why POS with Masternodes?</h3>
           <div class="answer">
             POS (Proof-of-Stake) is an Eco-friendly alternative to POW (Proof-of-Work). Curium is committed to a better future and with the lower power consumption of POS, Curium stays true to that. It also incentivizes curium’s holders of all sizes by allocating 40% of the block reward to stakers.<br>
-	Masternodes or (CRU nodes) not only enable lightning fast transactions and stability, but they also add extended functionality to the network. They allow for governance that directs and funds the future development and outreach of Curium through CRU Proposals. Masternode holders are also granted voting rights on CRU Proposals and CRU Treasury fund allocation. Since Master nodes allow these additional features, they are granted 60% of the block reward.
+	Masternodes or (CRU nodes) not only enable lightning fast transactions and stability, but they also add extended functionality to the network. They allow for governance that directs and funds the future development and outreach of Curium through CRU Proposals. Masternode holders are also granted voting rights on CRU Proposals and CRU Treasury fund allocation. Since Masternodes allow these additional features, they are granted 60% of the block reward.
           </div>
         </div>
       </div>
